# mangrove

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
crates/examples/: Cargo.toml
crates/examples/assets/scripts/: main.swamp
crates/input-binding/: Cargo.toml
crates/input-binding/src/: lib.rs
crates/limnus-input/: Cargo.toml
crates/limnus-input/src/: lib.rs
crates/limnus-steam-input/: Cargo.toml
crates/limnus-steam-input/docs/: DEVELOPMENT.md
crates/limnus-steam-input/src/: lib.rs
crates/limnus-steamworks/: Cargo.toml
crates/limnus-steamworks/src/: lib.rs
crates/mangrove/: Cargo.toml
crates/mangrove/assets/: main.swamp
crates/mangrove/src/: main.rs
crates/save-detector/: Cargo.toml
crates/save-detector/src/: lib.rs
crates/script/: Cargo.toml
crates/script/src/: audio.rs  convert.rs  err.rs  flow.rs  input.rs  lib.rs  logic.rs  main.rs  modules.rs  render.rs  script.rs  script_main.rs  serialize.rs  sim_input.rs  simulation.rs  source_map.rs  temp.rs  util.rs
examples/: README.md
examples/assets/scripts/: main.swamp
examples/flying_bats/: README.md
examples/flying_bats/scripts/: logic.swamp  main.swamp  render.swamp
examples/scripts/: main.swamp
examples/shmup/: README.md
examples/shmup/assets/font/: hackman.fnt
examples/shmup/scripts/: gameplay.swamp  logic.swamp  main.swamp  math.swamp  render.swamp
scripts/: RELEASE.md  changelog.yaml  pack_packages.sh
