[package]
name = "limnus-steam-input"
version = "0.0.9"
edition = "2024"

[dependencies]
steamworks = "0.11.0"
limnus-app = "0.0.17"
limnus-local-resource = "0.0.17"
limnus-resource = "0.0.17"
limnus-system-params = "0.0.17"
limnus-default-stages = "0.0.17"

limnus-steamworks = { path = "../limnus-steamworks", version = "0.0.9" }
limnus-input-binding = { path = "../input-binding", version = "0.0.9" }
limnus-input = { path = "../limnus-input", version = "0.0.9" }

seq-map = "0.0.13"
tracing = "0.1.40"
