[package]
name = "mangrove-engine"
version = "0.0.16"
edition = "2024"
license = "MIT"
description = "2D game engine powered by swamp-script"
repository = "https://github.com/swamp/mangrove"

[[bin]]
name = "mangrove"
path = "src/main.rs"

[dependencies]
swamp = "0.0.18"
#swamp = { path = "../../../swamp/crates/swamp", version = "0.0.17" }

#limnus = "0.0.17-alpha.2"
mangrove-script = { path = "../script", version = "0.0.16" }
mangrove-save-detector = { path = "../save-detector", version = "0.0.16" }

limnus-steamworks = { path = "../limnus-steamworks", version = "0.0.16", optional = true }
limnus-steam-input = { path = "../limnus-steam-input", version = "0.0.16", optional = true }

[features]
steam = ["limnus-steamworks", "limnus-steam-input"]
time_machine = []
default = []
