[package]
name = "mangrove-save-detector"
version = "0.0.4-alpha.2"
edition = "2021"
license = "MIT"
description = "Detects file changes and sends message to mangrove script plugin"
repository = "https://github.com/swamp/mangrove"

[dependencies]
mangrove-script = { path = "../script", version = "0.0.4-alpha.2" }

#swamp = { path = "../../../swamp/crates/swamp", version = "0.0.14-alpha.1" }
swamp = "0.0.14-alpha.2"

limnus-message = "0.0.12"

message-channel = "0.0.1"

notify = "7.0.0"
