[package]
name = "mangrove-save-detector"
version = "0.0.9"
edition = "2024"
license = "MIT"
description = "Detects file changes and sends message to mangrove script plugin"
repository = "https://github.com/swamp/mangrove"

[dependencies]
mangrove-script = { path = "../script", version = "0.0.9" }

swamp = "0.0.18"
#swamp = { path = "../../../swamp/crates/swamp", version = "0.0.16-alpha.1" }

limnus-message = "0.0.17"

message-channel = "0.0.1"

notify = "8.0.0"
