[package]
name = "mangrove-script"
version = "0.0.9"
edition = "2024"
license = "MIT"
description = "Swamp Script plugin for Mangrove"
repository = "https://github.com/swamp/mangrove"

[dependencies]
swamp = "0.0.18"
#swamp = { path = "../../../swamp/crates/swamp", version = "0.0.18" }

#swamp-script = "0.1.0"
swamp-script = { path = "../../../script/crates/swamp-script", version = "0.1.0" }
limnus-input-binding = { path = "../input-binding", version = "0.0.9" }

limnus-message = "0.0.17"
limnus-gamepad = "0.0.17"
limnus-screen = "0.0.17"

tracing = "0.1.40"
seq-map = "0.0.13"
monotonic-time-rs = "0.0.9"
yansi = "1.0.1"
chrono = "0.4.40"
tiny-ver = "0.1.2"
